Added functionalities and syntax correction to the codebase

--- a/ecommerceApp/templates/property.html
+++ b/ecommerceApp/templates/property.html
@@ -11,22 +11,22 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
-  <link rel="stylesheet" href="property.css">
+  <link rel="stylesheet" href="/static/css/property.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="index.html"><img src="images/Logo2.png" alt=""></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="/static/images/Logo2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse nav_items" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="CheapHomes.html">Cheap Homes</a>
-          <a class="nav-link" href="DreamHomes.html">Dream Mansions</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link" href="CheapHomes">Cheap Homes</a>
+          <a class="nav-link" href="DreamHomes">Dream Mansions</a>
           <a class="nav-link" href="#">About Us</a>
-          <a class="nav-link" href="ContactUs.html">Contact Us</a>
+          <a class="nav-link" href="ContactUs">Contact Us</a>
         </div>
       </div>
     </div>
