--- a/ecommerceApp/templates/CheapHomes.html
+++ b/ecommerceApp/templates/CheapHomes.html
@@ -7,22 +7,22 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="index.html"><img src="images/Logo2.png" alt=""></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="/static/images/Logo2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse nav_items" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link active" href="CheapHomes.html">Cheap Homes</a>
-          <a class="nav-link" href="DreamHomes.html">Dream Mansions</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" href="CheapHomes">Cheap Homes</a>
+          <a class="nav-link" href="DreamHomes">Dream Mansions</a>
           <a class="nav-link" href="#">About Us</a>
-          <a class="nav-link" href="ContactUs.html">Contact Us</a>
+          <a class="nav-link" href="ContactUs">Contact Us</a>
         </div>
       </div>
     </div>
@@ -30,132 +30,22 @@
   <h1 class="page_header">Cheap Homes</h1>
   <div class="container" ctn>
     <div class="row">
+      
+      {% for mansion in CheapHomes %}
       <div class="col-4">
         <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-13_optimized-300x222.jpg" class="card-img-top" alt="...">
+          <img src="{{ mansion.CoverImageUrl }}" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Mansion Monday: Loule, Algarve, Portugal – $453,400</h5>
+            <h5 class="card-title">{{ mansion.Title }}: {{ mansion.Location }} – {{ mansion.Price }}</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="property copy.html" class="btn btn-primary">View property</a>
+            <a href="property/{{ mansion.unique_id }}" class="btn btn-primary">View property</a>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-12_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Drapanos, Crete, Greece – $116,100</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-11_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Fuerteventura, Canary Islands, Spain – $105,000</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/04/high_res-3_optimized-2-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Fixer-Upper Friday: Deviat, Charente, France – $109,700</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-9_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Caro, Morbihan, France – $146,500</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-8_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Målilla, Hultsfred, Sweden – $116,300</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-7_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Velez-Rubio, Andalucia, Spain – $60,800</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-12_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Mansion Monday: Creuse, Limousin, France – $505,600</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-11_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Oschatz, Germany – $94,300</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-10_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Comano, Toscana, Italy – $97,700</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-9_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Fixer-Upper Friday: Charente, Poitou-Charentes, France – $86,300</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-8_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Váci Út, Budapest, Hungary – $127,000</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
+
     </div>
   </div>
-  <div class="container Older">
-    <a href="#">Older posts</a>
-  </div>
-
 
 
 
