--- a/ecommerceApp/templates/ContactUs.html
+++ b/ecommerceApp/templates/ContactUs.html
@@ -7,22 +7,22 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="ContactUs.css">
+  <link rel="stylesheet" href="static/css/ContactUs.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="index.html"><img src="images/Logo2.png" alt=""></i></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="/static/images/Logo2.png" alt=""></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse nav_items" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="CheapHomes.html">Cheap Homes</a>
-          <a class="nav-link" href="DreamHomes.html">Dream Mansions</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link" href="CheapHomes">Cheap Homes</a>
+          <a class="nav-link" href="DreamHomes">Dream Mansions</a>
           <a class="nav-link" href="#">About Us</a>
-          <a class="nav-link active" href="ContactUs.html">Contact Us</a>
+          <a class="nav-link active" href="ContactUs">Contact Us</a>
         </div>
       </div>
     </div>
@@ -31,41 +31,52 @@
     <h1 class="page_header">Contact Us</h1>
     <hr>
   </div>
-  <div class="container">
-    <div class="row">
-        <div class="col-5">
-            <div class="mb-3">
-                <label for="formGroupExampleInput" class="form-label">Your Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+
+  {% load widget_tweaks %}
+  <form method="POST">
+    {% csrf_token %}
+    <div class="container">
+      <div class="row">
+          <div class="col-5">
+              <div class="mb-3">
+                  <label for="formGroupExampleInput" class="form-label">First Name</label>
+                  {% render_field form.FirstName class="form-control" id="formGroupExampleInput" placeholder="" type="text" %}
+                  <!-- <input type="text" class="form-control" id="formGroupExampleInput" placeholder=""> -->
+              </div>
+              <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label">Last Name</label>
+                {% render_field form.LastName class="form-control" id="formGroupExampleInput" placeholder="" type="text" %}
+                <!-- <input type="text" class="form-control" id="formGroupExampleInput" placeholder=""> -->
             </div>
-            <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Your Email</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Subject</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Your message (optional)</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary submit">Submit</button>
-        </div>
-        <div class="col-7">
-            <img src="images/contact_image.jpeg" alt="">
-        </div>
+              <div class="mb-3">
+                  <label for="formGroupExampleInput2" class="form-label">Your Email</label>
+                  {% render_field form.Email class="form-control" id="formGroupExampleInput2" placeholder="" type="email" %}
+                  <!-- <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=""> -->
+              </div>
+              <div class="mb-3">
+                <label for="formGroupExampleInput2" class="form-label">Mobile No</label>
+                {% render_field form.Mobile_No class="form-control" id="formGroupExampleInput2" placeholder="" type="text" %}
+                <!-- <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=""> -->
+              </div>
+              <div class="mb-3">
+                  <label for="formGroupExampleInput2" class="form-label">Subject</label>
+                  {% render_field form.Subject class="form-control" id="formGroupExampleInput2" placeholder="" type="text" %}
+                  <!-- <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=""> -->
+              </div>
+              <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Your message (optional)</label>
+                  {% render_field form.Message class="form-control" id="exampleFormControlTextarea1" placeholder="" type="textarea" %}
+                  <!-- <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea> -->
+              </div>
+              <input type="submit" class="btn btn-primary submit" value="Submit">
+          </div>
+      </div>
     </div>
-  </div>
+  </form>
 
 
 
-
-
-
-
-
-
+  
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
 
