--- a/ecommerceApp/templates/index.html
+++ b/ecommerceApp/templates/index.html
@@ -7,7 +7,7 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
   <link rel="icon" href="/static/images/logo2.png" sizes="32x32">
 </head>
 <body>
@@ -19,11 +19,11 @@
       </button>
       <div class="collapse navbar-collapse nav_items" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="CheapHomes.html">Cheap Homes</a>
-          <a class="nav-link" href="DreamHomes.html">Dream Mansions</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" href="CheapHomes">Cheap Homes</a>
+          <a class="nav-link" href="DreamHomes">Dream Mansions</a>
           <a class="nav-link" href="#">About Us</a>
-          <a class="nav-link" href="ContactUs.html">Contact Us</a>
+          <a class="nav-link" href="ContactUs">Contact Us</a>
         </div>
       </div>
     </div>
@@ -31,303 +31,75 @@
   <h2 class="page_header">Latest Properties</h2>
   <div class="container" ctn>
     <div class="row">
+
+
+      {% for mansion in DreamMansions %}
       <div class="col-4">
         <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-13_optimized-300x222.jpg" class="card-img-top" alt="...">
+          <img src="{{ mansion.CoverImageUrl }}" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Mansion Monday: Loule, Algarve, Portugal – $453,400</h5>
+            <h5 class="card-title">{{ mansion.Title }}: {{ mansion.Location }} – {{ mansion.Price }}</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="property copy.html" class="btn btn-primary">View property</a>
+            <a href="property/{{ mansion.unique_id }}" class="btn btn-primary">View property</a>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-12_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Drapanos, Crete, Greece – $116,100</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="property copy 2.html" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-11_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Fuerteventura, Canary Islands, Spain – $105,000</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/04/high_res-3_optimized-2-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Fixer-Upper Friday: Deviat, Charente, France – $109,700</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-9_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Caro, Morbihan, France – $146,500</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-8_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Målilla, Hultsfred, Sweden – $116,300</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-7_optimized-1-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Velez-Rubio, Andalucia, Spain – $60,800</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-12_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Mansion Monday: Creuse, Limousin, France – $505,600</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-11_optimized-300x222.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Oschatz, Germany – $94,300</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="#" class="btn btn-primary">View property</a>
-          </div>
-        </div>
-      </div>
-    </div>
+      {% endfor %}
+
+
+     
     
   <h2 class="page_header2">Latest Cheap Homes</h2>
-    <div id="col-6">
+  
+    <div class="row">
+      {% for mansion in CheapHomes %}
       <div class="col-6">
-      <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-13_optimized-150x150.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">MANSION MONDAY: Umbertide, Perugia, Italy – $517,000</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
+        <div class="card mb-3 bxshadow" style="max-width: 740px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="{{ mansion.CoverImageUrl }}" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">{{ mansion.Title }}: {{ mansion.Location }} – {{ mansion.Price }}</h5>
+                <a href="property/{{ mansion.unique_id }}" class="btn btn-primary">View property</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      {% endfor %}
     </div>
-  </div>
-</div>
-    </div>
-    <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-12_optimized-1-150x150.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Drapanos, Crete, Greece – $116,100</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
-    <div id="col-6">
-      <div class="col-6">
-      <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-11_optimized-1-150x150.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Fuerteventura, Canary Islands, Spain – $105,000</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/04/high_res-3_optimized-2-150x150.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Fixer-Upper Friday: Deviat, Charente, France – $109,700</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
-    <div id="col-6">
-      <div class="col-6">
-      <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-9_optimized-1-300x222.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Caro, Morbihan, France – $146,500</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2023/05/high_res-8_optimized-1-300x222.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Målilla, Hultsfred, Sweden – $116,300</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
+   
+
     
   <h2 class="page_header2">Latest Dream Mansions</h2>
-    <div id="col-6">
-      <div class="col-6">
-      <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/06/Jun-4-1-150x150.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">MANSION MONDAY: Umbertide, Perugia, Italy – $517,000</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
+    
+  <div class="row">
+    {% for mansion in DreamMansions %}
     <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/05/May-28-1-150x150.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Tavira, Algarve, Portugal – $524,000</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
-    <div id="col-6">
-      <div class="col-6">
       <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/05/May-21-150x150.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Roatan, Honduras – $625,000</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="{{ mansion.CoverImageUrl }}" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{ mansion.Title }}: {{ mansion.Location }} – {{ mansion.Price }}</h5>
+              <a href="property/{{ mansion.unique_id}}" class="btn btn-primary">View property</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    {% endfor %}
   </div>
-</div>
-    </div>
-    <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/05/May-14-150x150.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Champagnac, Charente-Maritime, France – $525,800</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
-    <div id="col-6">
-      <div class="col-6">
-      <div class="card mb-3 bxshadow" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/05/May-7-300x208.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Olivia, Valencia, Spain – $377,900</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="col-6">
-      <div class="card mb-3" style="max-width: 740px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="https://overseasdreamhome.com/wp-content/uploads/2022/04/Apr-30-300x208.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Tavira, Algarve, Portugal – $539,200</h5>
-         <a href="property.html" class="btn btn-primary">View property</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-    </div>
-  </div>
-  
+    
   
 
 
-
-
-
-
-
+  </div>
+</div>
 <!-- Remove the container if you want to extend the Footer to full width. -->
 
   <footer class="bg-dark text-center text-white">
