--- a/ecommerceApp/static/css/property.css
+++ b/ecommerceApp/static/css/property.css
@@ -7,37 +7,67 @@ html, body {
 }
 
 @media only screen and (max-width: 768px) {
-  #container{
-    width: 100%;
-    display: block !important;
-  }
-  .container{
-    width: 100% !important;
-  }
+  
   .form{
     width: 100% !important;
   }
   body{
     font-size: 15px;
   }
+  .col-7 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .col-5 {
+    width: 100%;
+  }
+  .my_navbar {
+    padding: 30px 20px !important;
+  }
+  .form a {
+    margin-left: 40% !important;
+  }
+  .col-7 {
+    height: 800px !important;
+  }
+  .mySwiper {
+    height: 20% !important;
+    box-sizing: border-box;
+    padding: 10px 0;
+  }
 }
 
 @media only screen and (max-width: 425px) {
-  #container{
-    width: 100%;
-    display: block !important;
-  }
-  .container{
-    width: 100% !important;
-  }
   .form{
     width: 100% !important;
   }
   p, .caption, ul{
-    font-size: 10px !important;
+    font-size: 15px !important;
   }
   h2,h5{
-    font-size: 15px;
+    font-size: 20px;
+  }
+  .col-7 {
+    width: 94%;
+    margin-right: 3%;
+    margin-left: 3%;
+    height: 450px !important;
+  }
+  .form a {
+    margin-left: 35% !important;
+  }
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
+  .mySwiper2 {
+    height: 250px !important;
+    width: 100%;
+  }
+  .mySwiper {
+    height: 20% !important;
+    box-sizing: border-box;
+    padding: 10px 0;
   }
 }
 .nav_items {
@@ -88,87 +118,7 @@ html, body {
   margin-left: 5%;
   display: flex;
 }
-.container {
-  position: relative;
-  width: 50%;
-  margin-left: 0px;
-  background-color: whitesmoke;
-  margin-bottom: 20px;
-}
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-.prev{
-  left: 0;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.row{
-  padding-top: 10px;
-}
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-.carousel-indicator img{
-  height: 50px;
-  width: 70px;
-}
-.carousel-item{
-  margin-bottom: 30px;
-}
 .caption{
   color: #edaa38;
 }
@@ -178,10 +128,11 @@ html, body {
 }
 .price{
   margin-top: 40px;
+  text-align: right;
 }
 .form{
-  background-color: whitesmoke;
-  width: 40%;
+  background-color: lavender;
+  border-radius: 5px;
 }
 .form button{
   background-color: #ed9c38;
@@ -190,35 +141,103 @@ html, body {
   height: 40px;
   border: none;
   color: white;
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 5%;
 }
 .form input, textarea{
   border: none;
   padding: 10px;
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 15px;
-}
-.form a{
-  margin-top: 20px;
-  margin-left: 40%;
-}
-section{
   width: 90%;
   margin-left: 5%;
-  margin-top: 20px;
+  margin-top: 15px;
 }
+.form a {
+  margin-top: 5%;
+  margin-left: 35%;
+  margin-bottom: 5%;
+}
+
 .detail{
   display: flex;
-  gap: 20%;
+  gap: 10%;
+}
+.Features {
+  margin-top: 30px;
+}
 
-}
-.detail ul{
+.detail ul {
   list-style: none;
-  padding-left: 0px;
+  padding-left: 20px;
 }
-h6{
+.detail ul li::before {
+  content: "\2022";
+  color: #ed9c38;
+  font-weight: bold;
+  display: inline-block; 
+  width: 1em;
+  margin-left: -1em;
+}
+
+h6 {
   text-align: left; 
   color: #edaa38;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  height: 500px;
+  width: 100%;
+}
+
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.col-7 {
+  background-color: lavender;
+  height: 800px;
+  border-radius: 5px;
 }
