--- a/ecommerceApp/templates/ContactUs.html
+++ b/ecommerceApp/templates/ContactUs.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +8,12 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="static/css/ContactUs.css">
+  <link rel="stylesheet" href="{% static 'css/ContactUs.css' %}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="/"><img src="static/images/Logo2.png" alt=""></i></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="{% static 'images/logo2.png' %}" alt=""></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -85,7 +86,9 @@
   <div class="p-4 pb-0 footer">
     <!-- Section: Form -->
     <section class="">
-      <form action="">
+      {% load widget_tweaks %}
+      <form method="POST">
+        {% csrf_token %}
         <!--Grid row-->
         <div class="row d-flex justify-content-center">
           <!--Grid column-->
@@ -100,7 +103,8 @@
           <div class="col-md-5 col-12">
             <!-- Email input -->
             <div class="form-outline form-white mb-4">
-              <input type="email" id="form5Example2" class="form-control" placeholder="example@gmail.com" />
+              {% render_field emailForm.Email  id="form5Example2" class="form-control" placeholder="example@gmail.com"  type="email" %}
+              <!-- <input type="email" id="form5Example2" class="form-control" placeholder="example@gmail.com" /> -->
               <label class="form-label" for="form5Example2">Email address</label>
             </div>
           </div>
@@ -124,14 +128,12 @@
 
   <!-- Copyright -->
   <div class="text-center p-3 Copyright">
-    © 2020 Copyright:
+    © 2023 Copyright:
     <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
   </div>
   <!-- Copyright -->
 </footer>
 <!-- End of .container -->
-
-
 
 
 
