--- a/ecommerceApp/templates/alert.html
+++ b/ecommerceApp/templates/alert.html
@@ -8,20 +8,20 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/alert.css' %}">
   <link rel="icon" href="{% static 'images/logo2.png' %}" sizes="32x32">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="/"><img src="{% static 'images/logo2.png' %}" alt=""></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="{% static 'images/logo2.png' %}" alt=""></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse nav_items" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" aria-current="page" href="/">Home</a>
-          <a class="nav-link active" href="CheapHomes">Cheap Homes</a>
+          <a class="nav-link" href="CheapHomes">Cheap Homes</a>
           <a class="nav-link" href="DreamHomes">Dream Mansions</a>
           <a class="nav-link" href="AboutUs">About Us</a>
           <a class="nav-link" href="ContactUs">Contact Us</a>
@@ -29,28 +29,35 @@
       </div>
     </div>
   </nav>
-  <h1 class="page_header">Cheap Homes</h1>
-  <div class="container" ctn>
-    <div class="row">
-      
-      {% for mansion in CheapHomes %}
-      <div class="col-4">
-        <div class="card">
-          <img src="{{ mansion.CoverImageUrl }}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{ mansion.Title }}: {{ mansion.Location }} – {{ mansion.DollarsPrice }}</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-            <a href="property/{{ mansion.unique_id }}" class="btn btn-primary">View property</a>
-          </div>
+  <div class="container">
+    <hr>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+        </symbol>
+      </svg>
+      <div class="alert alert-success d-flex align-items-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+        <div>
+          Your request has been sent successfully!
         </div>
       </div>
-      {% endfor %}
-
+        <div class="asa">
+            <a href="/" class="back_btn">Back</a>
+        </div>
     </div>
-  </div>
+
+
+
+
+
+
+
+
 
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
+
 <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="p-4 pb-0 footer">
@@ -61,32 +68,11 @@
         {% csrf_token %}
         <!--Grid row-->
         <div class="row d-flex justify-content-center">
-          <!--Grid column-->
-          <div class="col-auto">
-            <p class="pt-2">
-              <strong>Sign up for our newsletter</strong>
-            </p>
-          </div>
+          
           <!--Grid column-->
 
           <!--Grid column-->
-          <div class="col-md-5 col-12">
-            <!-- Email input -->
-            <div class="form-outline form-white mb-4">
-              {% render_field emailForm.Email  id="form5Example2" class="form-control" placeholder="example@gmail.com"  type="email" %}
-              <!-- <input type="email" id="form5Example2" class="form-control" placeholder="example@gmail.com" /> -->
-              <label class="form-label" for="form5Example2">Email address</label>
-            </div>
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-auto">
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-outline-light mb-4">
-              Subscribe
-            </button>
-          </div>
+          
           <!--Grid column-->
         </div>
         <!--Grid row-->
