--- a/ecommerceApp/templates/index.html
+++ b/ecommerceApp/templates/index.html
@@ -53,7 +53,7 @@
   <h2 class="page_header2">Latest Cheap Homes</h2>
   
   <div class="row" style="margin: 0px; width: 100%;">
-    {% for mansion in DreamMansions %}
+    {% for mansion in CheapHomes %}
     <div class="col-6">
       <div class="card mb-3 bxshadow" style="max-width: 740px;">
         <div class="row g-0">
