--- a/ecommerceApp/templates/index.html
+++ b/ecommerceApp/templates/index.html
@@ -34,7 +34,7 @@
     <div class="row">
 
 
-      {% for mansion in DreamMansions %}
+      {% for mansion in LatestHomes %}
       <div class="col-4">
         <div class="card">
           <img src="{{ mansion.CoverImageUrl }}" class="card-img-top" alt="...">
@@ -58,7 +58,7 @@
       <div class="card mb-3 bxshadow" style="max-width: 740px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="{{ mansion.CoverImageUrl }}" alt="...">
+            <img src="{{ mansion.CoverImageUrl }}" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -81,7 +81,7 @@
       <div class="card mb-3 bxshadow" style="max-width: 740px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="{{ mansion.CoverImageUrl }}" alt="...">
+            <img src="{{ mansion.CoverImageUrl }}" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
