added some values to the database and changed the naavigation for the cheap homes and dream mansion display

--- a/ecommerceApp/templates/CheapHomes.html
+++ b/ecommerceApp/templates/CheapHomes.html
@@ -47,25 +47,36 @@
       {% endfor %}
 
     </div>
+
+    <!-- FOR THE PAGINATION NAVIGATION SECTION-->
+    <br>
+    <div style="width: 100%; display: flex; justify-content: space-between;">
+      {% if CheapHomes.has_previous and CheapHomes.has_next %}
+            <a href="?page={{ CheapHomes.previous_page_number }}" style="text-decoration: none; margin-right: 10px; color: #99722d;">Older posts</a>
+            <a href="?page={{ CheapHomes.next_page_number }}" style="text-decoration: none; color: #99722d;">Newer posts</a>
+      {% endif %}
+    </div>
+    <div style="width: 100%; display: flex; justify-content: space-around;">
+      {% if CheapHomes.has_next and not CheapHomes.has_previous %}
+            <a href="?page={{ CheapHomes.next_page_number }}" style="text-decoration: none; color: #99722d;">Newer posts</a>
+      {% endif %}
+    </div>
+    <div style="width: 100%; display: flex; justify-content: space-around;">
+      {% if CheapHomes.has_previous and not CheapHomes.has_next %}
+            <a href="?page={{ CheapHomes.previous_page_number }}" style="text-decoration: none; color: #99722d;">Older posts</a>
+      {% endif %}
+    </div>
+    <br>
   </div>
 
   <!-- PAGINATION ROW -->
-  <div class="container" style="display: flex; flex-direction: row; justify-content: space-around; width: 100%; padding: 1px solid black;">
+  <!-- <div class="container" style="display: flex; flex-direction: row; justify-content: space-around; width: 100%; padding: 1px solid black;">
     <span class="step-links">
         <span class="current">
             Page {{ CheapHomes.number }} of {{ CheapHomes.paginator.num_pages }}
         </span>
-    </span>
-    <div>
-      {% if CheapHomes.has_previous %}
-            <a href="?page=1" style="text-decoration: none; margin-right: 10px;">&laquo; first</a>
-            <a href="?page={{ CheapHomes.previous_page_number }}" style="text-decoration: none; margin-right: 10px;">previous</a>
-      {% endif %}
-      {% if CheapHomes.has_next %}
-            <a href="?page={{ CheapHomes.next_page_number }}" style="text-decoration: none; margin-right: 10px;">next</a>
-            <a href="?page={{ CheapHomes.paginator.num_pages }}" style="text-decoration: none;">last &raquo;</a>
-      {% endif %}
-    </div>
+    </span>-->
+    
         
 </div>
 
